# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-15 20:48:27 GMT	John Goerzen <jgoerzen@complete.org>	patch-63

    Summary:
      Genericized AL
    Revision:
      missingh--head--0.5--patch-63


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs testsrc/Printftest.hs


2004-11-15 20:41:19 GMT	John Goerzen <jgoerzen@complete.org>	patch-62

    Summary:
      Association list printing working
    Revision:
      missingh--head--0.5--patch-62


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs testsrc/Printftest.hs


2004-11-15 20:27:31 GMT	John Goerzen <jgoerzen@complete.org>	patch-61

    Summary:
      Experimental AL work for Printf
    Revision:
      missingh--head--0.5--patch-61


    removed files:
     libsrc/MissingH/Varargs.hs

    modified files:
     ChangeLog README libsrc/MissingH/Printf.hs
     libsrc/MissingH/Printf/Types.hs


2004-11-15 19:12:34 GMT	John Goerzen <jgoerzen@complete.org>	patch-60

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-60


    new files:
     libsrc/MissingH/Varargs.hs

    modified files:
     ChangeLog libsrc/MissingH/Printf/Types.hs


2004-11-15 15:48:48 GMT	John Goerzen <jgoerzen@complete.org>	patch-59

    Summary:
      Added more examples, docs for printf
    Revision:
      missingh--head--0.5--patch-59


    modified files:
     ChangeLog TODO libsrc/MissingH/Printf.hs testsrc/Printftest.hs


2004-11-15 14:52:03 GMT	John Goerzen <jgoerzen@complete.org>	patch-58

    Summary:
      Clarified copyright status of Printf code from Ian Lynagh
    Revision:
      missingh--head--0.5--patch-58


    new files:
     3rd-party-licenses/.arch-ids/=id 3rd-party-licenses/LGPL-2.1

    modified files:
     COPYRIGHT ChangeLog TODO debian/copyright
     libsrc/MissingH/Printf.hs libsrc/MissingH/Printf/Printer.hs
     libsrc/MissingH/Printf/Types.hs

    new directories: