@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
 #
 
+2004-11-15 21:05:53 GMT	John Goerzen <jgoerzen@complete.org>	patch-64
+
+    Summary:
+      Checkpointing
+    Revision:
+      missingh--head--0.5--patch-64
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/Printf.hs testsrc/Printftest.hs
+
+
 2004-11-15 20:48:27 GMT	John Goerzen <jgoerzen@complete.org>	patch-63
 
     Summary:
